# PythonTemplateIt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CreateDbSqlScript.ps1  DockerRebuild.ps1  Install.ps1  InstallDevEnv.ps1  InstallReact.ps1  LICENSE.txt  README.md  README.rst  ReleaseNotes.md  SetUpDocker.ps1  SetupDotEnv.ps1  SetupGitHubAccess.ps1  SetupPrivateRepoAccess.ps1  add_private_repo.ps1  clean_and_restart.ps1  clean_and_restart.sh  docker-compose.yaml  install_dev_env.ps1  install_react.sh  pyproject.toml
.github/workflows/: 02-ci.yaml  03-build-and-publish-to-pypi.yaml  04-build-and-publish-to-pypi.yaml  README.md
.junie/: guidelines.md
scripts/: setup_db.sql  simulate_prod.ps1
tasks/: todo.md
tests/: test_pytontemplate.py  test_pytontemplateit.py
